# feedforbot

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  Justfile  LICENSE  README.md  TODO.md  app.py  config.yml  docker-compose.yml  go.mod  go.sum  mypy.ini  pyfeedstg.py  pyproject.toml  requirements.txt  test_FeedForwarder.py  test_config.yml  test_requirements.txt
.github/workflows/: build.yml  deploy.yml  lint.yml  pypi.yml  tests.yml
bot/: Dockerfile  app.py  requirements.txt
bot/pyfeedstg/: __init__.py  forwarder.py  server.py
feedforbot/: __init__.py  __main__.py  __version__.py  article.py  cache.py  cli.py  config.py  constants.py  exceptions.py  http_client.py  listeners.py  logger.py  main.go  scheduler.py  sentry.py  transports.py  types.py  utils.py
feedforbot/cli/: __init__.py  app.py  config.py  configure_logging.py  healthcheck.py  utils.py
feedforbot/core/: article.py  cache.py  listeners.py  scheduler.py  targets.go  telegram.go  transports.py  types.py  update.go  utils.py
pyfeedstg/: __init__.py  forwarder.py
src/: app.py  feeds.yml
src/bot/: bot.py  main.py
src/bot/core/: __init__.py  forwarder.py  listener.py  settings.py
src/bot/models/: __init__.py  feed.py  feed_entry.py
src/bot/schemas/: __init__.py  feed_entry_schema.py  feed_schema.py  listener_schema.py
tests/: conftest.py  rss1.xml  rss2.xml  rsshttp.py  test_FeedForwarder.py  test_cache.py  test_config.yml  test_http_client.py  test_requirements.txt  test_scheduler.py
tests/cli/: test_config.py  test_shutdown.py
tests/core/listeners/: test_rss.py
tests/listeners/: test_rss.py
tests/mocks/: rss_full.xml  rss_short.xml
tests/transports/: test_telegram.py
tmfeed/: .env.example  config.yml  deploy.playbook.yml  deploy.yml  feedforbot.compose.yml.j2  inventory.ini
