[project]
name = "FeedForBot"
version = "0.0.0"
description = "Forward links from RSS/Atom feeds to messengers"
authors = [{ name = "Aleksandr Shpak", email = "shpaker@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "aiocron~=2.1",
    "aiofiles>=24.1",
    "beautifulsoup4~=4.13",
    "click~=8.2",
    "feedparser~=6.0",
    "httpx~=0.28",
    "jinja2~=3.1",
    "orjson~=3.10",
    "pydantic~=2.0",
    "pyyaml~=6.0",
    "sentry-sdk~=2.0",
]

[project.urls]
Homepage = "https://github.com/shpaker/feedforbot"
Repository = "https://github.com/shpaker/feedforbot"

[project.scripts]
feedforbot = "feedforbot.cli:main"

[dependency-groups]
dev = ["pre-commit>=4.0",
    "bandit>=1.7",
    "mypy>=1.8,<2.0",
    "ruff>=0.4",
    "safety>=2.0",
    "types-aiofiles>=23.2",
    "types-beautifulsoup4>=4.12",
    "types-pyyaml>=6.0",
    "freezegun>=1.2.2",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "respx>=0.20.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.13"
plugins = [
  "pydantic.mypy"
]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = ["feedparser.*", "aiocron"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = [
  ".venv",
]
lint.ignore = [
  "PLR0913",  # Too many arguments to function call
  "PTH123",   # PTH123 `open("foo")` should be replaced by `Path("foo").open()`
  "RUF001",   # Docstring contains ambiguous chars
  "RUF002",   # Docstring contains ambiguous chars
  "RUF003",   # Docstring contains ambiguous chars
]
lint.flake8-tidy-imports.ban-relative-imports = "all"
lint.mccabe.max-complexity = 20
lint.select = [
   "F",  # Pyflakes
   "E",  # pycodestyle
 "C90",  # mccabe
  "I",  # isort
#   "N",  # pep8-naming
#   "D",  # pydocstyle
  "UP",  # pyupgrade
 "YTT",  # flake8-2020
# "ANN",  # flake8-annotations
#   "S",  # flake8-bandit
 "BLE",  # flake8-blind-except
# "FBT",  # flake8-boolean-trap
   "B",  # flake8-bugbear
#   "A",  # flake8-builtins
#  "COM",  # flake8-commas
  "C4",  # flake8-comprehensions
 "DTZ",  # flake8-datetimez
 "T10",  # flake8-debugger
#  "EM",  # flake8-errmsg
 "EXE",  # flake8-executable
 "ISC",  # flake8-implicit-str-concat
# "ICN",  # flake8-import-conventions
   "G",  # flake8-logging-format
 "INP",  # flake8-no-pep420
# "PIE",  # flake8-pie
 "T20",  # flake8-print
#  "PT",  # flake8-pytest-style
#   "Q",  # flake8-quotes
 "RET",  # flake8-return
 "SIM",  # flake8-simplify
 "TID",  # flake8-tidy-imports
 "TCH",  # flake8-type-checking
 "ARG",  # flake8-unused-arguments
 "PTH",  # flake8-use-pathlib
 "ERA",  # eradicate
#  "PD",  # pandas-vet
# "PGH",  # pygrep-hooks
  "PL",  # Pylint
 "TRY",  # tryceratops
 "RSE",  # flake8-raise
 "SLF",  # flake8-self
 "RUF",  # Ruff-specific rules
]
